Make launchers self-contained and auto-scale game windows